# mikurando-backend/openapi.yaml
@@ -557,8 +557,8 @@ paths:
 
     get:
       summary: Get order history for current user
-      tags: [Orders]
-      security: [{ BearerAuth: [] }]
+      tags: [ Orders ]
+      security: [ { BearerAuth: [ ] } ]
       responses:
         '200':
           description: Success
@@ -567,7 +567,20 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Order'
+                  type: object
+                  properties:
+                    order_id:
+                      type: integer
+                    restaurant_id:
+                      type: integer
+                    restaurant_name:
+                      type: string
+                    status:
+                      $ref: '#/components/schemas/OrderStatusEnum'
+                    total_price:
+                      type: number
+                    created_at:
+                      type: string
         '401':
           description: Unauthorized (Invalid or missing token)
         '403':
